--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -32,12 +32,12 @@ body {
   #scene-container {
     /* tell our scene container to take up the full page */
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
   
     /*
       Set the container's background color to the same as the scene's
       background to prevent flashing on load
     */
-    background-color: skyblue;
+    background-color: lavenderblush;
   }
